website/tests/snapshots/types/classes.exp
=== block 1 ===
No errors!

=== block 2 ===
Error ------------------------------------------------------------------------------ -:8:16

Cannot assign `new A()` to `foo` because `A` [1] is incompatible with `B` [2]. [incompatible-type]

   -:8:16
   8| const foo: B = new A(); // Error!
                     ^^^^^^^ [1]

References:
   -:8:12
   8| const foo: B = new A(); // Error!
                 ^ [2]

Error ------------------------------------------------------------------------------ -:9:16

Cannot assign `new B()` to `bar` because `B` [1] is incompatible with `A` [2]. [incompatible-type]

   -:9:16
   9| const bar: A = new B(); // Error!
                     ^^^^^^^ [1]

References:
   -:9:12
   9| const bar: A = new B(); // Error!
                 ^ [2]


Found 2 errors

=== block 3 ===
Error ------------------------------------------------------------------------------ -:5:31

Cannot assign `new MyClass()` to `foo` because `MyClass` [1] is not a subtype of object type [2]. Class instances are
not subtypes of object types; consider rewriting object type [2] as an interface. [class-object-subtyping]

   -:5:31
   5| const foo: {x: number, ...} = new MyClass(); // Error!
                                    ^^^^^^^^^^^^^ [1]

References:
   -:5:12
   5| const foo: {x: number, ...} = new MyClass(); // Error!
                 ^^^^^^^^^^^^^^^^ [2]


Found 1 error

=== block 4 ===
No errors!

=== block 5 ===
No errors!

=== block 6 ===
Error ------------------------------------------------------------------------------- -:3:3

Cannot define method `method` [1] on `MyClass` because property `x` is missing in `MyClass` [2] but exists in interface
type [3]. [incompatible-type]

   -:3:3
   3|   method(this: interface {x: string}) { /* ... */ } // Error!
        ^^^^^^ [1]

References:
   -:2:7
   2| class MyClass {
            ^^^^^^^ [2]
   -:3:16
   3|   method(this: interface {x: string}) { /* ... */ } // Error!
                     ^^^^^^^^^^^^^^^^^^^^^ [3]


Found 1 error

=== block 7 ===
Error ------------------------------------------------------------------------------- -:7:3

Cannot assign function to `a.method` because property `method` is not writable. [cannot-write]

   7| a.method = function() {}; // Error!
        ^^^^^^


Found 1 error

=== block 8 ===
Error ------------------------------------------------------------------------------ -:12:3

Private fields can only be referenced from within a class. [ParseError]

   12| a.#internalMethod(); // Error!
         ^^^^^^^^^^^^^^^


Found 1 error

=== block 9 ===
Error ------------------------------------------------------------------------------- -:3:8

Missing an annotation on return. [missing-local-annot]

   3|   foo() { // Error!

Error ------------------------------------------------------------------------------- -:6:8

Missing an annotation on return. [missing-local-annot]

   6|   bar() { // Error!


Found 2 errors

=== block 10 ===
No errors!

=== block 11 ===
Error ------------------------------------------------------------------------------ -:4:10

Cannot assign `42` to `this.prop` because property `prop` is missing in `MyClass` [1]. [prop-missing]

   -:4:10
   4|     this.prop = 42; // Error!
               ^^^^

References:
   -:2:7
   2| class MyClass {
            ^^^^^^^ [1]


Found 1 error

=== block 12 ===
No errors!

=== block 13 ===
No errors!

=== block 14 ===
No errors!

=== block 15 ===
No errors!

=== block 16 ===
Error ----------------------------------------------------------------------------- -:10:10

Cannot assign `1` to `this.prop` because property `prop` is not writable. [cannot-write]

   10|     this.prop = 1; // Error!
                ^^^^

Error ------------------------------------------------------------------------------ -:16:3

Cannot assign `1` to `a.prop` because property `prop` is not writable. [cannot-write]

   16| a.prop = 1; // Error!
         ^^^^


Found 2 errors

=== block 17 ===
Error ----------------------------------------------------------------------------- -:15:21

Private fields can only be referenced from within a class. [ParseError]

   15| const x: number = a.#internalValue; // Error!
                           ^^^^^^^^^^^^^^


Found 1 error

=== block 18 ===
No errors!

=== block 19 ===
No errors!

=== block 20 ===
Error ------------------------------------------------------------------------------- -:6:7

Cannot implement `WithXNum` [1] with `MyClass` because property `x` is missing in `MyClass` [2] but exists in
`WithXNum` [1]. [incompatible-type]

   -:6:7
   6| class MyClass implements WithXNum { // Error!
            ^^^^^^^ [2]

References:
   -:6:26
   6| class MyClass implements WithXNum { // Error!
                               ^^^^^^^^ [1]


Found 1 error

=== block 21 ===
No errors!

=== block 22 ===
Error ------------------------------------------------------------------------------ -:10:5

Must call `super` before accessing `this` [1] in a derived constructor. [reference-before-declaration]

   -:10:5
   10|     this.foo; // Error
           ^^^^

References:
   -:6:7
    6| class MyClass extends Base {
             ^^^^^^^ [1]

Error ------------------------------------------------------------------------------ -:11:5

Must call `super` before accessing `this` [1] in a derived constructor. [reference-before-declaration]

   -:11:5
   11|     this.bar; // Error
           ^^^^

References:
   -:6:7
    6| class MyClass extends Base {
             ^^^^^^^ [1]

Error ------------------------------------------------------------------------------ -:12:5

Must call `super` before accessing `super` [1] in a derived constructor. [reference-before-declaration]

   -:12:5
   12|     super.bar; // Error
           ^^^^^

References:
   -:6:23
    6| class MyClass extends Base {
                             ^^^^ [1]


Found 3 errors

=== block 23 ===
No errors!

=== block 24 ===
No errors!

=== block 25 ===
No errors!

=== block 26 ===
Error ------------------------------------------------------------------------------ -:7:36

Cannot get `counter.increment` because property `increment` [1] cannot be unbound from the context [2] where it was
defined. [method-unbinding]

   -:7:36
   7| const tick: () => number = counter.increment; // ERROR: [method-unbinding]
                                         ^^^^^^^^^ [1]

References:
   -:4:3
   4|   increment(): number { return ++this.count; }
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Found 1 error

=== block 27 ===
Error ------------------------------------------------------------------------------- -:4:8

property `method` [1] cannot be unbound from the context [2] where it was defined. [method-unbinding]

   -:4:8
   4| const {method} = a; // Error!
             ^^^^^^ [1]

References:
   -:2:17
   2| class MyClass { method() {} }
                      ^^^^^^^^^^^ [2]


Found 1 error
